--- a/configuration/Areas/Entrance/configuration.yaml
+++ b/configuration/Areas/Entrance/configuration.yaml
@@ -1,108 +1,63 @@
 entrance:
-  # Binary Sensors
-  #----------------------------------#
-  binary_sensor:
-    # Bayesian
-    #----------------------------------#
-    - platform: bayesian
-      name: Entrance Occupied
-      prior: 0.09
-      device_class: occupancy
-      probability_threshold: 0.2
-      observations:
-        - platform: "state"
-          entity_id: binary_sensor.entrance_motion
-          prob_given_true: 0.2924643
-          prob_given_false: 0.0011349
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.entrance_motion_1_occupancy
-          prob_given_true: 0.2924643
-          prob_given_false: 0.0011349
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.front_door_contact
-          prob_given_true: 0.1527232
-          prob_given_false: 0.0134844
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.front_door_ding
-          prob_given_true: 0.3561458
-          prob_given_false: 0.0238955
-          to_state: "on"
-
-  # Variable Sensors
-  #----------------------------------#
-  sensor:
-  # Template Sensors
-  #----------------------------------#
   template:
-    # Template Binary Sensors
-    #----------------------------------#
-    binary_sensor:
-      # Bright Sensors
-      #----------------------------------#
-      - unique_id: entrance_bright
-        name: "Entrance Bright"
-        device_class: light
-        state: |
-          {% set lux = states('sensor.entrance_illuminance') %}
-          {% set threshold = states('input_number.entrance_illuminance_level') %}
-          {% set selfState = states('binary_sensor.entrance_bright') %}
-          {% set lightState = states('light.entrance') %}
-          {% set selfLastChanged = states.binary_sensor.entrance_bright.last_changed %}
-          {% if threshold | int(0) == 0 %}
-            False
-          {% elif lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
-            True
-          {% elif lux | int(0) > (threshold | int(0) * 3) %}
-            True
-          {% elif ((threshold | int(0) < lux | int(0) < (threshold | int(0) * 1.3 ))) and (as_timestamp(now())-as_timestamp(selfLastChanged) < 300) %}
-            {{ selfState }}
-          {% elif lux | int(0) < threshold | int(0) %}
-            False
-          {% else %}
-            False
-          {% endif %}
-
-      # Humid Sensors
-      #----------------------------------#
-
-    # Template Variable Sensors
-    #----------------------------------#
-    sensor:
-      # Probabilities
-      #----------------------------------#
-      - unique_id: entrance_occupied_probability
-        name: Entrance Occupied Probability
-        state_class: measurement
-        unit_of_measurement: "%"
-        state: "{{ (state_attr('binary_sensor.entrance_occupied','probability')*100 | int(0) ) | round(0) }}"
-
-  # Media Players
-  #----------------------------------#
-  media_player:
-
-  # Notification Platforms
-  #----------------------------------#
-  notify:
-
-  # Shell Commands
-  #----------------------------------#
-  shell_command:
-
-  # Switches
-  #----------------------------------#
-  switch:
-
-  # Cameras
-  #----------------------------------#
-  camera:
-
-  # Example configuration.yaml entry
-  mqtt:
-    sensor:
-      - state_topic: "home/bedroom/temperature"
+    - binary_sensor:
+        - name: Entrance Occupancy
+          unique_id: entrance_occupancy
+          device_class: occupancy
+          state: |-
+            {% set scores = namespace(total=0) %}
+            {% if is_state('binary_sensor.entrance_motion', 'on') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+            {% if is_state('binary_sensor.entrance_door_contact', 'off') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+            {% if is_state('input_boolean.entrance_occupied_override', 'on') %}  {% set scores.total = scores.total + 5 %}{% endif %}
+            {{ scores.total >= 3 }}
+          attributes:
+            confidence_score: |-
+              {% set scores = namespace(total=0) %}
+              {% if is_state('binary_sensor.entrance_motion', 'on') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+              {% if is_state('binary_sensor.entrance_door_contact', 'off') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+              {% if is_state('input_boolean.entrance_occupied_override', 'on') %}  {% set scores.total = scores.total + 5 %}{% endif %}
+              {{ scores.total }}
+            active_triggers: |-
+              {% set triggers = [] %}
+              {% if is_state('binary_sensor.entrance_motion', 'on') %}  {% set triggers = triggers + ['Motion Detected'] %}{% endif %}
+              {% if is_state('binary_sensor.entrance_door_contact', 'off') %}  {% set triggers = triggers + ['Door Closed'] %}{% endif %}
+              {% if is_state('input_boolean.entrance_occupied_override', 'on') %}  {% set triggers = triggers + ['Manual Override'] %}{% endif %}
+              {{ triggers|join(', ') }}
+  input_number:
+    entrance_light_brightness:
+      name: Entrance Light Brightness
+      min: 0.0
+      max: 100.0
+      step: 5.0
+      unit_of_measurement: "%"
+      icon: mdi:brightness-6
+      initial: 100.0
+    entrance_light_transition:
+      name: Entrance Light Transition Time
+      min: 0.0
+      max: 10.0
+      step: 0.5
+      unit_of_measurement: s
+      icon: mdi:transition
+      initial: 2.0
+    entrance_humidity_threshold:
+      name: Entrance Humidity Threshold
+      min: 30.0
+      max: 80.0
+      step: 1.0
+      unit_of_measurement: "%"
+      icon: mdi:water-percent
+      initial: 60.0
+  input_boolean:
+    entrance_light_color_mode:
+      name: Entrance Light Color Mode
+      icon: mdi:palette
+    entrance_occupied_override:
+      name: Entrance Manual Occupancy Override
+      icon: mdi:account-check
+    entrance_sleep_mode:
+      name: Entrance Sleep Mode
+      icon: mdi:power-sleep
+    entrance_automations:
+      name: Entrance Automations
+      icon: mdi:robot
