--- a/configuration/Areas/Lounge/configuration.yaml
+++ b/configuration/Areas/Lounge/configuration.yaml
@@ -1,129 +1,200 @@
 lounge:
-  # Binary Sensors
-  #----------------------------------#
-  binary_sensor:
-    # Bayesian
-    #----------------------------------#
-    - platform: bayesian
-      name: Lounge Occupied
-      prior: 0.40
-      device_class: occupancy
-      probability_threshold: 0.7
-      observations:
-
-        - platform: "state"
-          entity_id: binary_sensor.back_door_left_contact
-          prob_given_true: 0.0028274
-          prob_given_false: 0.0000972
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.back_door_right_contact
-          prob_given_true: 0.1951905
-          prob_given_false: 0.1543939
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.lounge_bright
-          prob_given_true: 0.0474970
-          prob_given_false: 0.2667856
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.lounge_doors
-          prob_given_true: 0.1964286
-          prob_given_false: 0.1551342
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.lounge_person_occupancy
-          prob_given_true: 0.05
-          prob_given_false: 0.0085813
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.lounge_motion
-          prob_given_true: 0.3738080
-          prob_given_false: 0.0080722
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.lounge_motion_1_occupancy
-          prob_given_true: 0.3721682
-          prob_given_false: 0.0080578
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.lounge_temperature_motion_lux_1_occupancy
-          prob_given_true: 0.2849435
-          prob_given_false: 0.0070264
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: binary_sensor.lounge_tv_state
-          prob_given_true: 0.3392574
-          prob_given_false: 0.0077303
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: input_boolean.lounge_schedule
-          prob_given_true: 0.1172500
-          prob_given_false: 0.2712675
-          to_state: "on"
-
-        - platform: "state"
-          entity_id: media_player.lounge_tv
-          prob_given_true: 0.0661607
-          prob_given_false: 0.0021306
-          to_state: "playing"
-
-  # Variable Sensors
-  #----------------------------------#
-  sensor:
-  # Template Sensors
-  #----------------------------------#
   template:
-    # Template Binary Sensors
-    #----------------------------------#
-    binary_sensor:
-      # Bright Sensors
-      #----------------------------------#
-      - unique_id: lounge_bright
-        name: "Lounge Bright"
-        device_class: light
-        state: |
-          {% set lux = states('sensor.lounge_illuminance') %}
-          {% set threshold = states('input_number.lounge_illuminance_level') %}
-          {% set selfState = states('binary_sensor.lounge_bright') %}
-          {% set lightState = states('light.bedroom') %}
-          {% set selfLastChanged = states.binary_sensor.lounge_bright.last_changed %}
-          {% if threshold | int(0) == 0 %}
-            False
-          {% elif lux | int(0) > (threshold | int(0) * 1.3) and lightState == 'off' %}
-            True
-          {% elif lux | int(0) > (threshold | int(0) * 3) %}
-            True
-          {% elif ((threshold | int(0) < lux | int(0) < (threshold | int(0) * 1.3 ))) and (as_timestamp(now())-as_timestamp(selfLastChanged) < 300) %}
-            {{ selfState }}
-          {% elif lux | int(0) < threshold | int(0) %}
-            False
-          {% else %}
-            False
-          {% endif %}
+    - binary_sensor:
+        - name: Lounge Occupancy
+          unique_id: lounge_occupancy
+          device_class: occupancy
+          state: |-
+            {% set scores = namespace(total=0) %}
+            {% if is_state('binary_sensor.lounge_motion', 'on') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+            {% if is_state('binary_sensor.lounge_doors', 'off') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+            {% if is_state('binary_sensor.lounge_tv_active', 'on') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+            {% if is_state('input_boolean.lounge_occupied_override', 'on') %}  {% set scores.total = scores.total + 5 %}{% endif %}
+            {{ scores.total >= 3 }}
+          attributes:
+            confidence_score: |-
+              {% set scores = namespace(total=0) %}
+              {% if is_state('binary_sensor.lounge_motion', 'on') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+              {% if is_state('binary_sensor.lounge_doors', 'off') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+              {% if is_state('binary_sensor.lounge_tv_active', 'on') %}  {% set scores.total = scores.total + 3 %}{% endif %}
+              {% if is_state('input_boolean.lounge_occupied_override', 'on') %}  {% set scores.total = scores.total + 5 %}{% endif %}
+              {{ scores.total }}
+            active_triggers: |-
+              {% set triggers = [] %}
+              {% if is_state('binary_sensor.lounge_motion', 'on') %}  {% set triggers = triggers + ['Motion Detected'] %}{% endif %}
+              {% if is_state('binary_sensor.lounge_doors', 'off') %}  {% set triggers = triggers + ['Door Closed'] %}{% endif %}
+              {% if is_state('binary_sensor.lounge_tv_active', 'on') %}  {% set triggers = triggers + ['TV Active'] %}{% endif %}
+              {% if is_state('input_boolean.lounge_occupied_override', 'on') %}  {% set triggers = triggers + ['Manual Override'] %}{% endif %}
+              {{ triggers|join(', ') }}
+    - binary_sensor:
+        - name: Lounge TV Active
+          unique_id: lounge_tv_active
+          state: |-
+            {% set power = states('sensor.tv_power')|float(0) %}
+            {{ power > 10 }}
+          attributes:
+            power_draw: >-
+              {{ states('sensor.tv_power')|float(0) }}
+            current_channel: >-
+              {{ states('sensor.tv_channel') }}
+            volume: >-
+              {{ states('sensor.tv_volume')|int(0) }}
+      sensor:
+        - name: Lounge TV Status
+          unique_id: lounge_tv_status
+          state: >-
+            {{ states('sensor.tv_state') }}
+          attributes:
+            input_source: >-
+              {{ states('sensor.tv_input_source') }}
+            hdmi_connected: >-
+              {{ state_attr('sensor.tv_hdmi', 'connected_devices')|default([]) }}
+        - name: Lounge TV Power State
+          unique_id: lounge_tv_power_state
+          state: |-
+            {% set power = states('sensor.tv_power')|float(0) %}
+            {% if power > 50 %}on{% elif power > 10 %}standby{% else %}off{% endif %}
+    - sensor:
+        - name: Total Power
+          unique_id: total_power
+          state: |-
+            {% set components = [
+                'sensor.lounge_tv_power',
+                'sensor.lounge_entertainment_power'
+            ] %}
 
-    # Template Variable Sensors
-    #----------------------------------#
-    sensor:
-      # Probabilities
-      #----------------------------------#
-      - unique_id: lounge_occupied_probability
-        name: Lounge Occupied Probability
-        state_class: measurement
-        unit_of_measurement: "%"
-        state: "{{ (state_attr('binary_sensor.lounge_occupied','probability')*100 | int(0) ) | round(0) }}"
+            {% set total = namespace(power=0) %}
+            {% for component in components %}
+              {% set total.power = total.power + states(component)|float(0) %}
+            {% endfor %}
+            {{ total.power|round(2) }}
+          attributes:
+            tv: >-
+              {{ states('sensor.lounge_tv_power')|float(0)|round(2) }}
+            entertainment: >-
+              {{ states('sensor.lounge_entertainment_power')|float(0)|round(2) }}
+    - sensor:
+        - name: Daily Energy
+          unique_id: daily_energy
+          state: |-
+            {% set components = [
+                'sensor.lounge_tv_daily_energy',
+                'sensor.lounge_entertainment_daily_energy'
+            ] %}
 
-  # Media Players
-  #----------------------------------#
+            {% set total = namespace(energy=0) %}
+            {% for component in components %}
+              {% set total.energy = total.energy + states(component)|float(0) %}
+            {% endfor %}
+            {{ total.energy|round(3) }}
+          attributes:
+            last_reset: >-
+              {{ now().replace(hour=0, minute=0, second=0, microsecond=0).isoformat() }}
+    - binary_sensor:
+        - name: Lounge Temperature Rising
+          unique_id: lounge_temp_rising
+          state: |-
+            {% set current = states('sensor.lounge_temperature')|float(20) %}
+            {% set previous = state_attr('sensor.lounge_temperature', 'previous_value')|float(20) %}
+            {% set threshold = 0.2 %}
+            {{ (current - previous) > threshold }}
+        - name: Lounge Temperature Falling
+          unique_id: lounge_temp_falling
+          state: |-
+            {% set current = states('sensor.lounge_temperature')|float(20) %}
+            {% set previous = state_attr('sensor.lounge_temperature', 'previous_value')|float(20) %}
+            {% set threshold = 0.2 %}
+            {{ (current - previous) < threshold }}
+      sensor:
+        - name: Lounge Temperature Differential
+          unique_id: lounge_temp_differential
+          state: |-
+            {% set current = states('sensor.lounge_temperature')|float(20) %}
+            {% set target = state_attr('climate.lounge', 'temperature')|float(20) %}
+            {{ (current - target)|round(1) }}
+          attributes:
+            current_temp: >-
+              {{ states('sensor.lounge_temperature')|float(20) }}
+            target_temp: >-
+              {{ state_attr('climate.lounge', 'temperature')|float(20) }}
+            mode: >-
+              {{ state_attr('climate.lounge', 'hvac_action')|default('off') }}
+    - binary_sensor:
+        - name: Lounge High Humidity
+          unique_id: lounge_high_humidity
+          state: |-
+            {% set current = states('sensor.lounge_humidity')|float(50) %}
+            {{ current > 75 }}
+      sensor:
+        - name: Lounge Humidity Change
+          unique_id: lounge_humidity_change
+          state: |-
+            {% set current = states('sensor.lounge_humidity')|float(50) %}
+            {% set average = states('sensor.sensor.lounge_humidity_average')|float(50) %}
+            {{ ((current - average) / average * 100)|round(1) }}
+          attributes:
+            current_humidity: >-
+              {{ states('sensor.lounge_humidity')|float(50) }}
+            average_humidity: >-
+              {{ states('sensor.sensor.lounge_humidity_average')|float(50) }}
+  input_number:
+    lounge_power_threshold:
+      name: Lounge Power Alert Threshold
+      min: 100.0
+      max: 1000.0
+      step: 50.0
+      unit_of_measurement: W
+      icon: mdi:flash-alert
+      initial: 400.0
+    lounge_temp_threshold:
+      name: Lounge Temperature Threshold
+      min: 19.0
+      max: 25.0
+      step: 0.5
+      unit_of_measurement: °C
+      icon: mdi:thermometer
+      initial: 23.0
+    lounge_light_brightness:
+      name: Lounge Light Brightness
+      min: 0.0
+      max: 100.0
+      step: 5.0
+      unit_of_measurement: '%'
+      icon: mdi:brightness-6
+      initial: 100.0
+    lounge_light_transition:
+      name: Lounge Light Transition Time
+      min: 0.0
+      max: 10.0
+      step: 0.5
+      unit_of_measurement: s
+      icon: mdi:transition
+      initial: 5.0
+    lounge_humidity_threshold:
+      name: Lounge Humidity Threshold
+      min: 30.0
+      max: 80.0
+      step: 1.0
+      unit_of_measurement: '%'
+      icon: mdi:water-percent
+      initial: 60.0
+  input_boolean:
+    lounge_light_color_mode:
+      name: Lounge Light Color Mode
+      icon: mdi:palette
+    lounge_tv_power_management:
+      name: Lounge TV Power Management
+      icon: mdi:television
+    lounge_occupied_override:
+      name: Lounge Manual Occupancy Override
+      icon: mdi:account-check
+    lounge_sleep_mode:
+      name: Lounge Sleep Mode
+      icon: mdi:power-sleep
+    lounge_automations:
+      name: Lounge Automations
+      icon: mdi:robot
+
   media_player:
     - platform: wiim_custom
       host: 192.168.1.250
@@ -236,37 +307,3 @@ lounge:
         media_title: media_player.lounge_tv_shield|media_title
         media_duration: media_player.lounge_tv_shield|media_duration
         media_position: media_player.lounge_tv_shield|media_position
-  # Notification Platforms
-  #----------------------------------#
-  notify:
-
-  # Shell Commands
-  #----------------------------------#
-  shell_command:
-    # lounge_camera_turn_off: !secret loungecam_turn_off
-    # lounge_camera_turn_on: !secret loungecam_turn_on
-    # lounge_camera_floor: !secret loungecam_floor
-
-  # Switches
-  #----------------------------------#
-  switch:
-
-  command_line:
-    # - switch:
-    #     unique_id: lounge_camera_ir
-    #     name: Lounge Camera Night Mode
-    #     command_on: !secret loungecam_ir_on
-    #     command_off: !secret loungecam_ir_off
-    #     command_state: !secret loungecam_ir_state
-    #     value_template: '{{ value == "1" }}'
-    # - switch:
-    #     unique_id: lounge_camera_motion
-    #     name: Lounge Camera Motion Detection
-    #     command_on: !secret loungecam_motion_on
-    #     command_off: !secret loungecam_motion_off
-    #     command_state: !secret loungecam_motion_state
-    #     value_template: '{{ value == "1" }}'
-
-  # Cameras
-  #----------------------------------#
-  camera:
